Final commit fixing function in order to satisfy project requirements and code cleaning